2.3 - Apresentação para terceira entrega 06-04